// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with multiple items 1`] = `
<div
  className="box rounding2 shadow"
>
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-0"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
              title="Title1"
            >
              Title1
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary1"
              >
                summary1
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-0"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-1"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
              title="Title2"
            >
              Title2
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary2"
              >
                summary2
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-1"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-2"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="box marginEnd2"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="icon red iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
            <div
              className="Text fontSize3 red alignLeft breakWord fontWeightBold truncate"
              title="Title3"
            >
              Title3
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary3"
              >
                summary3
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-2"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with multiple items with expandedId 1`] = `
<div
  className="box rounding2 shadow"
>
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-0"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
              title="Title1"
            >
              Title1
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary1"
              >
                summary1
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-0"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-1"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
              title="Title2"
            >
              Title2
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary2"
              >
                summary2
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-1"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-2"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="box marginEnd2"
            >
              <svg
                aria-hidden={true}
                aria-label=""
                className="icon red iconBlock"
                height={16}
                role="img"
                viewBox="0 0 24 24"
                width={16}
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
            <div
              className="Text fontSize3 red alignLeft breakWord fontWeightBold truncate"
              title="Title3"
            >
              Title3
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary3"
              >
                summary3
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-2"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with one item 1`] = `
<div
  className="box rounding2 shadow"
>
  <div
    className="box"
  >
    <div
      aria-controls="uniqueTestID-0"
      aria-disabled={false}
      aria-expanded={false}
      aria-label="click to expand"
      className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box paddingX6 paddingY6 xsDisplayFlex"
      >
        <div
          className="box flexGrow itemsBaseline marginEnd6 xsDisplayFlex"
        >
          <div
            className="box xsCol6 xsDisplayFlex"
          >
            <div
              className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
              title="Title"
            >
              Title
            </div>
          </div>
          <div
            className="box marginStart6 xsCol6"
          >
            <div
              className="box marginBottom2"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary1"
              >
                summary1
              </div>
            </div>
            <div
              className="box marginBottom2"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary2"
              >
                summary2
              </div>
            </div>
            <div
              className="box marginBottom0"
            >
              <div
                className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
                title="summary3"
              >
                summary3
              </div>
            </div>
          </div>
        </div>
        <div
          className="box"
          id="uniqueTestID-0"
        >
          <div
            className="box paddingX1 paddingY1"
          >
            <svg
              aria-hidden={null}
              aria-label="click to expand"
              className="icon darkGray iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
